# SecureChat-AI-Threat-Detection

./: .gitignore  DEPLOY.md  MONOREPO_SPLIT.md  README.md  render.yaml
chatbot/: .env.example  README.md  chatbot.py  config.py  detector_client.py  inline_detector.py  pyproject.toml  vercel.json  web_server.py
chatbot/static/: index.html
prompt-injection-detector/: .env.example  README.md  requirements-prod.txt  requirements.txt  vercel.json
prompt-injection-detector/app/: analytics.py  classifier.py  main.py  models.py  pipeline.py  risk_engine.py
prompt-injection-detector/dashboard/: streamlit_app.py
prompt-injection-detector/logs/: detections.json
prompt-injection-detector/tests/: test_risk_engine.py
red_team/: __init__.py  arena_db.py  arena_ui.py  attack_generator.py  attack_runner.py  dashboard.py  guidance_content.json  requirements.txt  ui_theme.py
red_team/components/: arena_display.py  guidance_wizard.py
red_team/utils/: guidance_manager.py
