[project]
name = "securechat-chatbot"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "python-dotenv",
    "requests",
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "pandas",
    "pydantic",
    "python-multipart",
]

[tool.vercel]
entrypoint = "web_server:app"
buildCommand = "bash bundle_detector.sh && pip install ."
